Made for any dimension of problem

--- a/GPIA.ipynb
+++ b/GPIA.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "The second step (and where we break from the sklearn code) is to solve for the vector $K(x_*,X)$ using interval arithmetic, and multiply that vector by $Z$.\n",
     "\n",
-    "I also want to note that this code is a somewhat limited product; it is not be nearly as robust as the sklearn function; in particular, it is limited to only the use of the squared exponential kernal. It also only tracks the mean of the process, and not the variance.  At this moment we also work only in 2d, which was where the problem was encounter\n"
+    "I also want to note that this code is a somewhat limited product; it is not be nearly as robust as the sklearn function; in particular, it is limited to only the use of the squared exponential kernal. It also only tracks the mean of the process, and not the variance.  At this moment we also work only in 2d, which is because that was the dimension of the problem we were interested in.\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "f816b18e-a585-4fc4-953e-9179b03a5aa8",
    "metadata": {},
    "outputs": [],
@@ -93,22 +93,23 @@
     "    return Z\n",
     "\n",
     "# interval squared exponential kernal\n",
-    "def sq_exp_intvl_2D(a,b,tau):\n",
+    "def sq_exp_intvl(a,b,tau):\n",
     "    '''\n",
     "    Input:\n",
-    "        a: length 2 vector\n",
-    "        b: length 2 vector\n",
+    "        a: length q vector\n",
+    "        b: length q vector\n",
     "        tau: parameter in square exponential kernal\n",
     "    Output: \n",
     "        k: interval result of square exponential kernal on a,b with parameter tau\n",
     "    '''\n",
     "    # notice that squaring the norm cancels out the square root operation\n",
-    "    norm_sq = (interval(a[0])-interval(b[0]))**2 + (interval(a[1])-interval(b[1]))**2\n",
+    "    norm_sq_list = [(interval(a[i]) - interval(b[i]))**2 for i in range(len(a))]\n",
+    "    norm_sq = sum(norm_sq_list)\n",
     "    denom = -2*interval(tau)**2\n",
     "    return imath.exp(norm_sq/denom)\n",
     "\n",
     "# Define interval GP Regression\n",
-    "def GP_reg_intvl_2D(X_train, x_star, Z, tau):\n",
+    "def GP_reg_intvl(X_train, x_star, Z, tau):\n",
     "    \"\"\"\n",
     "    This function combines with GP_input_setup in order to do GP regression\n",
     "    Evaluates at points in R^n--single points, not collection\n",
@@ -130,7 +131,7 @@
     "    KX_starX = []\n",
     "    for j in range(m):\n",
     "        xj = X_train[j,:]\n",
-    "        KX_starX.append(sq_exp_intvl_2D(x_star,xj,tau))\n",
+    "        KX_starX.append(sq_exp_intvl(x_star,xj,tau))\n",
     "    \n",
     "    # getting result of regression, Y_star\n",
     "    # have to basically redefine linear algebra here by hand to implement interval arithmetic\n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "a7d648ff-b23f-4e89-a447-4d90a79cb8e6",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "9c0c32d5-3f4e-4c6a-b740-bc02a8b93385",
    "metadata": {},
    "outputs": [
@@ -185,8 +186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20.8 ms, sys: 5.21 ms, total: 26 ms\n",
-      "Wall time: 39.3 ms\n"
+      "CPU times: user 27.7 ms, sys: 10.1 ms, total: 37.8 ms\n",
+      "Wall time: 33.1 ms\n"
      ]
     }
    ],
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "db8684f6-e1ab-4d64-81b3-731c40ab446d",
    "metadata": {},
    "outputs": [
@@ -214,8 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.3 ms, sys: 9.5 ms, total: 27.8 ms\n",
-      "Wall time: 30.4 ms\n"
+      "CPU times: user 16.6 ms, sys: 5.23 ms, total: 21.8 ms\n",
+      "Wall time: 18.4 ms\n"
      ]
     }
    ],
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "a9647636-4930-41fe-a656-4bfba9949ac1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "9f88b279-8dbd-4a4b-85c6-c2e29c01b896",
    "metadata": {},
    "outputs": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "b0896f94-ad6a-4dec-8949-5b9bbe7b11c0",
    "metadata": {},
    "outputs": [
@@ -370,8 +371,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "55927129-5f7c-4c72-8f25-54a21640320a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(57.548051288008004, 1.7497778763419085)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "point_set[0]\n",
+    "    # norm_sq = (interval(a[0])-interval(b[0]))**2 + (interval(a[1])-interval(b[1]))**2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6c69503c-999a-49f3-a4b8-65781b90e03a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asdf = point_set[0]\n",
+    "qwer = point_set[1]\n",
+    "norm_sq_list = [(asdf[i]-qwer[i])**2 for i in range(len(asdf))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ebf7c33d-e895-43c9-a00d-ffeda4da930b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1075.5866418368514, 192.49334252838514]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm_sq_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cc52cd7-f2e4-43d1-a248-25963d1f1206",
    "metadata": {},
    "outputs": [],
    "source": []
